<resources>
    <string name="app_name">spendinglist</string>

    <string name="checkbox">com.example.pcardoso.spendinglist.checkbox</string>
    <string name="email">com.example.pcardoso.spendinglist.email</string>
    <string name="password">com.example.pcardoso.spendinglist.password</string>

    <string name="aa">AAA</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--names Account, AddExpenseActivity-->

    <string-array name="namesAccount">
        <item>Wallet</item>
        <item>CreditCard</item>
        <item>Bank</item>
    </string-array>
    <array name="imagesAccount">
        <item>@drawable/baseline_person_24</item>
        <item>@drawable/baseline_visibility_off_black_18</item>
        <item>@drawable/baseline_visibility_off_black_18</item>
    </array>
    <!--END names Account, AddExpenseActivity-->

    <!-- namesCategory Account, AddExpenseActivity -->
    <string-array name="namescategory">
        <item>Holiday</item>
        <item>Restaurant</item>
        <item>Car</item>
        <item>Water</item>
        <item>Light</item>
        <item>Accommodation</item>
    </string-array>

    <array name="imagesCategoryAccount">
        <item>@drawable/beachddexpense</item>
        <item>@drawable/restaurantddexpense</item>
        <item>@drawable/carddexpense</item>
        <item>@drawable/wateraddexpense</item>
        <item>@drawable/lightddexpense</item>
        <item>@drawable/bedddexpense</item>
    </array>
    <!--End Category, AddExpenseActivity-->

    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="amount">Amount(EURO)</string>
    <string name="account">Account</string>
    <string name="date">Date</string>
    <string name="new_expense">NEW</string>
    <string name="save">SAVE</string>
    <string name="image">imagespiner</string>
    <string name="imagedes">descreption</string>
    <string name="notifications">Notifications</string>


    <string name="desExpense">Expense</string>
    <string name="desCalculator">Calculator</string>

    <!--Activity Main images-->
        <string name="imgExpense">ImgExpense</string>
        <string name="imgCalculator">ImgCalculator</string>
        <string name="imgNotification">ImgNotifications</string>
        <string name="imageReport">ImgReport</string>
    <!--Activity Main images-->




    </resources>
